care/force-app/main/default/objects/StripeChargeResponse__c/StripeChargeResponse__c.object-meta.xml
<CustomObject>
    <label>StripeChargeResponse</label>
    <nameField>
        <label>StripeChargeResponse Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>StripeChargeResponses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>