care/force-app/main/default/objects/StripeChargeResponse__c/fields/Amount_Captured_Formatted__c.field-meta.xml
<CustomField>
    <fullName>Amount_Captured_Formatted__c</fullName>
    <label>Amount Captured Formatted</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>