care/force-app/main/default/objects/StripeChargeResponse__c/fields/Amount_To_Be_Refunded__c.field-meta.xml
<CustomField>
    <fullName>Amount_To_Be_Refunded__c</fullName>
    <label>Amount To Be Refunded</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>