care/force-app/main/default/objects/StripeChargeResponse__c/fields/Amount_To_Be_Refunded_For_Callout__c.field-meta.xml
<CustomField>
    <fullName>Amount_To_Be_Refunded_For_Callout__c</fullName>
    <formula>Amount_To_Be_Refunded__c * 100</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount To Be Refunded For Callout</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>