care/force-app/main/default/objects/StripeChargeResponse__c/fields/AmountCaptured__c.field-meta.xml
<CustomField>
    <fullName>AmountCaptured__c</fullName>
    <label>AmountCaptured</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>