care/force-app/main/default/objects/StripeChargeResponse__c/fields/AmountRefunded__c.field-meta.xml
<CustomField>
    <fullName>AmountRefunded__c</fullName>
    <label>AmountRefunded</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>