care/force-app/main/default/objects/StripeChargeResponse__c/fields/Application_Fee_Amount__c.field-meta.xml
<CustomField>
    <fullName>Application_Fee_Amount__c</fullName>
    <label>Application Fee Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>