care/force-app/main/default/objects/StripeChargeResponse__c/fields/Application_Fee_Amount_Formatted__c.field-meta.xml
<CustomField>
    <fullName>Application_Fee_Amount_Formatted__c</fullName>
    <label>Application Fee Amount Formatted</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>