care/force-app/main/default/objects/StripeChargeResponse__c/fields/Available_For_Refund__c.field-meta.xml
<CustomField>
    <fullName>Available_For_Refund__c</fullName>
    <label>Available For Refund</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>