care/force-app/main/default/objects/StripeChargeResponse__c/fields/BalanceTransaction__c.field-meta.xml
<CustomField>
    <fullName>BalanceTransaction__c</fullName>
    <label>BalanceTransaction</label>
    <length>255</length>
    <type>Text</type>
</CustomField>