care/force-app/main/default/objects/StripeChargeResponse__c/fields/CalculatedStatementDescriptor__c.field-meta.xml
<CustomField>
    <fullName>CalculatedStatementDescriptor__c</fullName>
    <label>CalculatedStatementDescriptor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>