care/force-app/main/default/objects/StripeChargeResponse__c/fields/ChargeId__c.field-meta.xml
<CustomField>
    <fullName>ChargeId__c</fullName>
    <label>ChargeId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>