care/force-app/main/default/objects/StripeChargeResponse__c/fields/Date_Charged__c.field-meta.xml
<CustomField>
    <fullName>Date_Charged__c</fullName>
    <label>Date Charged</label>
    <type>DateTime</type>
</CustomField>