care/force-app/main/default/objects/StripeChargeResponse__c/fields/Return_Reason__c.field-meta.xml
<CustomField>
    <fullName>Return_Reason__c</fullName>
    <label>Return Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Provider No Show</fullName>
            </value>
            <value>
                <fullName>Seeker Paid Offline and Prover Note Set up for Payments</fullName>
            </value>
            <value>
                <fullName>Cancelled through message history but booking not cancelled</fullName>
            </value>
            <value>
                <fullName>Unforeseen Circumstances</fullName>
            </value>
            <value>
                <fullName>Reschedule</fullName>
            </value>
            <value>
                <fullName>Duplicate Booking</fullName>
            </value>
            <value>
                <fullName>Provider is No Longer in Good Standing</fullName>
            </value>
            <value>
                <fullName>Subscription</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>